// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`VueComponent scoped slot > renders named scoped slot content 1`] = `
<div>
  <style></style>
  <div class="">
    <style></style>
    <div class="" data-scope-scope-id="">
      <p class="" data-scope-scope-id="">foo content</p>
      <p class="" slot-scope="props"><span class="">test1</span></p>
      <p class="" slot-scope="props"><span class="">test2</span></p>
    </div>
  </div>
</div>
`;

exports[`VueComponent scoped slot > renders scoped slot content 1`] = `
<div>
  <style></style>
  <div class="">
    <style></style>
    <div class="" data-scope-scope-id="">
      <p class="" data-scope-scope-id="">foo content</p>
      <p class="" slot-scope="props"><span class="">test</span></p>
    </div>
  </div>
</div>
`;

exports[`VueComponent scoped slot > resolves template element children as a slot 1`] = `
<div>
  <style></style>
  <div class="">
    <style></style>
    <div class="" data-scope-scope-id="">
      <div class="">named</div>
      <div class=""><span class="">test</span></div>
    </div>
  </div>
</div>
`;
